# fr_math

./: .gitignore  .travis.yml  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  FR_Math_Example1.cpp  FR_defs.h  FR_main.cpp  FR_math.c  FR_math.h  FR_math_2D.cpp  FR_math_2D.h  FR_math_docs.txt  FR_mathroutines.h  FR_trigDegrees.h  LICENSE.txt  README.md  agents.md  fr_math_test.c  idf_component.yml  index.html  keywords.txt  library.json  library.properties  llms.txt  makefile  release_management.md  release_notes.md  run.sh  test.sh
.github/: dependabot.yml
compare_lfm/: .gitignore  Makefile  Makefile.explog  Using_fast_hypot_as_sqrt.md  WARNING.md  bench_explog.cpp  benchmark.cpp  comparison_results.json  comparison_summary.md  pow_log_improve.md
dev/: FR_math_TODO.md  FR_math_TODO.txt  FR_mathroutines.h  FR_trigDegrees.c  FR_trigDegrees.h  README_OLD.md  baseline_pre_v2_report.md  coef-gen.py  fixedpoint-no-mul-fractionals.xlsx  fixes.md  fr_math2_impl_plan.md  fr_math_2.0.1.md  fr_math_precision.md  todo_update.md
docker/: Dockerfile  README.md  build_sizes.sh  build_sizes_compare.sh  run.sh  size_detail.sh
docs/: README.md  api-reference.md  building.md  examples.md  fixed-point-primer.md  getting-started.md  releases.html  releases.md
examples/: FR_Math_Example1.cpp  README.md
other/: FR_mathroutines.cpp  cordic-16bit.h  cordic-32bit.h  cordic-test.c  cordic_gentable.c  cordic_trig_sin_cos32.c  log2fix.c
pages/: index.html  releases.html  version.json
scripts/: accuracy_report.sh  build.sh  clean_build.sh  coverage_report.sh  crossbuild-docker.sh  (+6 more)
(+79 files in other folders)
